# containerlab-adapter

./: .env.example  .gitignore  AWS_SETUP.md  LICENSE  README.md  STAGE_A_SCOUT.md  pyproject.toml
scout-outputs/: host1-ethtool_S_eth1.txt  inspect.json  leaf1-ip_link.txt  leaf1-show_interfaces_counters.txt  leaf1-show_priority-group_watermark_headroom.txt  leaf1-supervisorctl.txt  leaf2-ip_link.txt  leaf2-show_ip_bgp_summary.txt  leaf2-show_pfc_counters.txt  leaf2-show_queue_counters.txt  leaf2-supervisorctl.txt  spine1-ip_link.txt  spine1-show_interfaces_counters.txt  spine1-show_interfaces_status.txt  spine1-show_pfc_counters.txt  spine1-show_priority-group_watermark_headroom.txt  spine1-show_queue_counters.txt  spine1-supervisorctl.txt
scripts/: check_setup.py  smoke_topology.py  smoke_vrspike_1port.py
src/containerlab_adapter/: __init__.py
src/containerlab_adapter/adapter/: __init__.py  schema_v1.py  server.py
src/containerlab_adapter/driver/: __init__.py  _node_utils.py  client.py  counters.py  envelope.py  flows.py  scenarios.py  topology.py
src/containerlab_adapter/scenarios/: __init__.py  hash_polarization.py
src/containerlab_adapter/topologies/: __init__.py  hash_polarization.clab.yaml
terraform/: main.tf  run-smoke.sh  setup-host.sh  smoke_step3.py
tests/: test_counters.py  test_scenarios.py  test_server.py  test_skeleton.py  test_topology.py
